--- a/orderform.html
+++ b/orderform.html
@@ -34,7 +34,38 @@
             <label for="espresso">Espresso:</label>
             <input type="number" id="espresso" name="espresso" min="1" max="10" value="1">
         </div>
-        <!-- Repeat for other items -->
+        <div class="form-item">
+            <label for="americano">Americano:</label>
+            <input type="number" id="americano" name="americano" min="0" max="10" value="0">
+        </div>
+        <div class="form-item">
+            <label for="latte">Latte:  </label>
+            <input type="number" id="latte" name="latte" min="0" max="10" value="0">
+        </div>
+        <div class="form-item">
+            <label for="green tea">Green Tea:</label>
+            <input type="number" id="green tea" name="green tea" min="0" max="10" value="0">
+        </div>
+        <div class="form-item">
+        <label for="black tea">Black Tea:</label>
+        <input type="number" id="black tea" name="black tea" min="0" max="10" value="0">
+        </div>
+        <div class="form-item">
+        <label for="croissant">Croissant:</label>
+        <input type="number" id="croissant" name="croissant" min="0" max="10" value="0">
+        </div>
+        <div class="form-item">
+        <label for="muffin">Muffin:  </label>
+        <input type="number" id="muffin" name="muffin" min="0" max="10" value="0">
+        </div>
+        <div class="form-item">
+        <label for="chicken sandwich">Chicken Sandwich:</label>
+        <input type="number" id="chicken sandwich" name="chicken sandwich" min="0" max="10" value="0">
+        </div>
+        <div class="form-item">
+        <label for="grilled cheese">Grilled Cheese:</label>
+        <input type="number" id="grilled cheese" name="grilled cheese" min="0" max="10" value="0">
+        </div>
         <button type="submit">Submit Order</button>
     </form>
 
