--- a/mainpage.html
+++ b/mainpage.html
@@ -64,8 +64,10 @@
         <h1>Sugar Cafe</h1>
         <nav>
             <ul>
-                <li><a href="Mainpage.html">Home</a></li>
+                <li><a href="mainpage.html">Home</a></li>
                 <li><a href="biography.html">Owner's Biography</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="orderform.html">Order Form</a></li>
             </ul>
         </nav>
     </header>
