--- a/menu.html
+++ b/menu.html
@@ -104,6 +104,14 @@
 </body>
     <div class="menu-container">
         <h1>Sugar Cafe Menu</h1>
+        <nav>
+            <ul>
+                <li><a href="#menu">Menu</a></li>
+                <li><a href="mainpage.html">Main Page</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
         <div id="coffee" class="menu-category" onclick="highlightCategory('coffee')">
             <h2>Coffee</h2>
             <div class="menu-item"><p>Espresso <span>$2.00</span></p></div>
