--- a/orderform.html
+++ b/orderform.html
@@ -71,6 +71,12 @@
 </head>
 <body>
     <h1>Welcome to Sugar Cafe!</h1>
+    <nav>
+        <ul>
+            <li><a href="#orderform">Order form</a></li>
+            <li><a href="mainpage.html">Main Page</a></li>
+        </ul>
+    </nav>
     <form action="/submit-order" method="POST">
         <div class="form-item">
             <label for="espresso">Espresso:</label>
