--- a/mainpage.html
+++ b/mainpage.html
@@ -65,7 +65,7 @@
         <nav>
             <ul>
                 <li><a href="mainpage.html">Home</a></li>
-                <li><a href="biography.html">Owner's Biography</a></li>
+                <li><a href="bio.html">Owner's Biography</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="orderform.html">Order Form</a></li>
             </ul>
