--- a/menu.html
+++ b/menu.html
@@ -108,6 +108,8 @@
             <ul>
                 <li><a href="#menu">Menu</a></li>
                 <li><a href="mainpage.html">Main Page</a></li>
+                <li><a href="bio.html">Menu</a></li>
+                <li><a href="orderform.html">Order Form</a></li>
             </ul>
         </nav>
     </header>
