--- a/orderform.html
+++ b/orderform.html
@@ -75,6 +75,8 @@
         <ul>
             <li><a href="#orderform">Order form</a></li>
             <li><a href="mainpage.html">Main Page</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="bio.html">Order Form</a></li>
         </ul>
     </nav>
     <form action="/submit-order" method="POST">
