--- a/orderform.html
+++ b/orderform.html
@@ -76,6 +76,7 @@
             <li><a href="#orderform">Order form</a></li>
             <li><a href="mainpage.html">Main Page</a></li>
             <li><a href="menu.html">Menu</a></li>
+            <li><a href="bio.html">Bio</a></li>
         </ul>
     </nav>
     <form action="/submit-order" method="POST">
